dovecot/dovecot-pigeonhole/tests/extensions/include/errors/included/action-reject.sieve
require "reject";

reject "Ik heb geen zin in die rommel.";
